--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.8.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "next": "14.2.3",
-    "pg": "^8.11.5",
+    "pg": "^8.12.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^34.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
